--- a/public/demo.html
+++ b/public/demo.html
@@ -3,176 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Demo</title>
-	<style>
-		.d {
-			background-color: #999999;
-		}
 
-		/* http://meyerweb.com/eric/tools/css/reset/
-	   v2.0 | 20110126
-	   License: none (public domain)
-	*/
-
-		html, body, div, span, applet, object, iframe,
-		h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-		a, abbr, acronym, address, big, cite, code,
-		del, dfn, em, img, ins, kbd, q, s, samp,
-		small, strike, strong, sub, sup, tt, var,
-		b, u, i, center,
-		dl, dt, dd, ol, ul, li,
-		fieldset, form, label, legend,
-		table, caption, tbody, tfoot, thead, tr, th, td,
-		article, aside, canvas, details, embed,
-		figure, figcaption, footer, header, hgroup,
-		menu, nav, output, ruby, section, summary,
-		time, mark, audio, video {
-			margin: 0;
-			padding: 0;
-			border: 0;
-			font-size: 100%;
-			font: inherit;
-			vertical-align: baseline;
-		}
-
-		/* HTML5 display-role reset for older browsers */
-		article, aside, details, figcaption, figure,
-		footer, header, hgroup, menu, nav, section {
-			display: block;
-		}
-
-		body {
-			line-height: 1;
-		}
-
-		ol, ul {
-			list-style: none;
-		}
-
-		blockquote, q {
-			quotes: none;
-		}
-
-		blockquote:before, blockquote:after,
-		q:before, q:after {
-			content: '';
-			content: none;
-		}
-
-		table {
-			border-collapse: collapse;
-			border-spacing: 0;
-		}
-
-
-		.slidecontainer {
-			width: 100%;
-		}
-
-		.slider {
-			-webkit-appearance: none;
-			width: 100%;
-			height: 25px;
-			background-size: contain;
-			background-position: center center;
-			background-repeat: repeat-x;
-			background-image: url('http://0.0.0.0:4000/assets/roads/road1.png');
-			outline: none;
-			-webkit-transition: .2s;
-			transition: opacity .2s;
-		}
-
-		.slider:hover {
-			opacity: 1;
-		}
-
-		.slider::-webkit-slider-thumb {
-			-webkit-appearance: none;
-			appearance: none;
-			width: 48px;
-			height: 48px;
-			border: 0;
-			background-size: contain;
-			background-position: center center;
-			background-repeat: no-repeat;
-			cursor: pointer;
-		}
-
-		.slider_car1::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_1.png');
-		}
-
-		.slider_car2::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_2.png');
-		}
-
-		.slider_car3::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_3.png');
-		}
-
-		.slider_car4::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_4.png');
-		}
-
-		.slider_car5::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_5.png');
-		}
-
-		.slider_car6::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_6.png');
-		}
-
-		.slider_car7::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_8.png');
-		}
-
-		.slider_car8::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_8.png');
-		}
-
-		.slider_car9::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_9.png');
-		}
-
-		.slider_car10::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_10.png');
-		}
-
-		.slider_car11::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_11.png');
-		}
-
-		.slider_car12::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_12.png');
-		}
-
-		.slider_car13::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_13.png');
-		}
-
-		.slider_car14::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_14.png');
-		}
-
-		.slider_car15::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_15.png');
-		}
-
-		.slider_car16::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_15.png');
-		}
-
-		.slider::-moz-range-thumb {
-			width: 48px;
-			height: 48px;
-			background-size: contain;
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_1.png');
-			cursor: pointer;
-		}
-	</style>
-	<link rel="stylesheet"
-		  href="https://raw.githubusercontent.com/kristoferjoseph/flexboxgrid/master/dist/flexboxgrid.min.css">
 </head>
 <body>
 <div id="list_of">
@@ -193,7 +24,7 @@
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" crossorigin="anonymous"></script>
 <script>
 	(() => {
-		const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2MWZjZDljOTNiNzQ0MzBhOGZlMzczYiIsInVzZXJuYW1lIjoiQWx5c3Nvbl9SeWFuIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6IjY1ZmM0NTdhNmVlNWZkYWIyZDQ4NzExZCIsInN1YnNjcmlwdGlvbl9leHBpcmUiOiIyMDI0LTA0LTI0VDEzOjI0OjQ0Ljk4OVoiLCJleHAiOjE3MjIwMDg5ODUsImlhdCI6MTcxNjgyNDk4NX0.t_bE0yGec6jb41uuI8hdRyOo7AchMpmwfhJKYQRsPKc";
+		const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2NGU0ZDIwNTgwNWQ1MzAxZDUxNWM5NyIsInVzZXJuYW1lIjoiQWx5c3Nvbl9SeWFuIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6IjY1ZmVmY2QyMmM3N2E4NTBlNDdjMWUzNiIsInN1YnNjcmlwdGlvbl9leHBpcmUiOiIyMDI0LTA1LTI5VDE5OjUzOjA0LjM3MloiLCJleHAiOjE3MjIxNjE3ODcsImlhdCI6MTcxNjk3Nzc4N30.ubKsZlgo7drXMaPmXn-bMleGSkRmwl71sh7nvwavBIg";
 		const socket = io("http://0.0.0.0:3001", {
 			reconnectionDelayMax: 10000,
 			upgrades: ["websocket"],
@@ -206,19 +37,24 @@
 		});
 
 		socket.on("connect", () => {
-			console.log("connected with:");
-			console.log(socket.id); // x8WIv7-mJelg7on_ALbx
+			console.log("connected with:", socket.id);
 		});
 
 		socket.on("disconnect", () => {
-			console.log(socket.id); // undefined
+			console.log("disconnected",socket.id); // undefined
 		});
 		let i = 0;
 		let classList = "";
 		let room_stop = [];
 		let old = {};
 
-		setTimeout(() => {
+		socket.onAny((eventName, ...args) => {
+			let room = args[0];
+			console.log(eventName, args);
+		});
+
+		/*setTimeout(() => {
+
 			socket.onAny((eventName, ...args) => {
 				let room = args[0];
 				let data = JSON.parse(args[1]);
@@ -227,7 +63,7 @@
 				}
 				let room_place = $("#a" + room);
 				if (room_place.length) {
-					/*console.log(room_stop, room, room_stop.includes(room));*/
+					/!*console.log(room_stop, room, room_stop.includes(room));*!/
 					if (!room_stop.includes(room)) {
 						Object.keys(data).forEach(key => {
 							let room_data_old = old[room];
@@ -274,25 +110,25 @@
 				})();
 
 			});
-		}, 3000);
+		}, 3000);*/
 
 		$(".join").on("click", (el) => {
 			let settings = {
-				"url": "http://0.0.0.0:4000/api/v1/race-game/join",
-				"method": "POST",
+				"url": "http://0.0.0.0:4001/api/ping",
+				"method": "GET",
 				"timeout": 0,
 				"headers": {
-					"Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYzOTMyNTEwOWZkYTczMmU2MTQyY2NmMiIsInVzZXJuYW1lIjoiQnRjT2xleSIsImV4cCI6MTY3NTc3MTk4MywiaWF0IjoxNjcwNTg3OTgzfQ.rf-zbBew0nGiwOljoGR3VjrhtHfsolo1J04y-1SdF18",
+					"Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2NGU0ZDIwNTgwNWQ1MzAxZDUxNWM5NyIsInVzZXJuYW1lIjoiQWx5c3Nvbl9SeWFuIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6IjY1ZmVmY2QyMmM3N2E4NTBlNDdjMWUzNiIsInN1YnNjcmlwdGlvbl9leHBpcmUiOiIyMDI0LTA1LTI5VDE5OjUzOjA0LjM3MloiLCJleHAiOjE3MjIxNjE3ODcsImlhdCI6MTcxNjk3Nzc4N30.ubKsZlgo7drXMaPmXn-bMleGSkRmwl71sh7nvwavBIg",
 					"Content-Type": "application/json"
 				},
-				"data": JSON.stringify({
+				"data": {
 					"room": "63973ae350ec3a746ff230f2",
 					"game": "6398403a3f95d437cf8c6085"
-				}),
+				},
 			};
 
 			$.ajax(settings).done(function (response) {
-				//console.log(response);
+				console.log(response);
 			});
 		});
 
