--- a/public/demo2.html
+++ b/public/demo2.html
@@ -2,181 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title><!DOCTYPE html>
-		<html lang="en">
-		<head>
-		<meta charset="UTF-8">
-		<title>Demo</title>
-	<style>
-		.d {
-			background-color: #999999;
-		}
+	<title>Demo</title>
 
-		/* http://meyerweb.com/eric/tools/css/reset/
-	   v2.0 | 20110126
-	   License: none (public domain)
-	*/
-
-		html, body, div, span, applet, object, iframe,
-		h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-		a, abbr, acronym, address, big, cite, code,
-		del, dfn, em, img, ins, kbd, q, s, samp,
-		small, strike, strong, sub, sup, tt, var,
-		b, u, i, center,
-		dl, dt, dd, ol, ul, li,
-		fieldset, form, label, legend,
-		table, caption, tbody, tfoot, thead, tr, th, td,
-		article, aside, canvas, details, embed,
-		figure, figcaption, footer, header, hgroup,
-		menu, nav, output, ruby, section, summary,
-		time, mark, audio, video {
-			margin: 0;
-			padding: 0;
-			border: 0;
-			font-size: 100%;
-			font: inherit;
-			vertical-align: baseline;
-		}
-
-		/* HTML5 display-role reset for older browsers */
-		article, aside, details, figcaption, figure,
-		footer, header, hgroup, menu, nav, section {
-			display: block;
-		}
-
-		body {
-			line-height: 1;
-		}
-
-		ol, ul {
-			list-style: none;
-		}
-
-		blockquote, q {
-			quotes: none;
-		}
-
-		blockquote:before, blockquote:after,
-		q:before, q:after {
-			content: '';
-			content: none;
-		}
-
-		table {
-			border-collapse: collapse;
-			border-spacing: 0;
-		}
-
-
-		.slidecontainer {
-			width: 100%;
-		}
-
-		.slider {
-			-webkit-appearance: none;
-			width: 100%;
-			height: 25px;
-			background-size: contain;
-			background-position: center center;
-			background-repeat: repeat-x;
-			background-image: url('http://0.0.0.0:4000/assets/roads/road1.png');
-			outline: none;
-			-webkit-transition: .2s;
-			transition: opacity .2s;
-		}
-
-		.slider:hover {
-			opacity: 1;
-		}
-
-		.slider::-webkit-slider-thumb {
-			-webkit-appearance: none;
-			appearance: none;
-			width: 48px;
-			height: 48px;
-			border: 0;
-			background-size: contain;
-			background-position: center center;
-			background-repeat: no-repeat;
-			cursor: pointer;
-		}
-
-		.slider_car1::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_1.png');
-		}
-
-		.slider_car2::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_2.png');
-		}
-
-		.slider_car3::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_3.png');
-		}
-
-		.slider_car4::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_4.png');
-		}
-
-		.slider_car5::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_5.png');
-		}
-
-		.slider_car6::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_6.png');
-		}
-
-		.slider_car7::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_8.png');
-		}
-
-		.slider_car8::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_8.png');
-		}
-
-		.slider_car9::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_9.png');
-		}
-
-		.slider_car10::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_10.png');
-		}
-
-		.slider_car11::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_11.png');
-		}
-
-		.slider_car12::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_12.png');
-		}
-
-		.slider_car13::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_13.png');
-		}
-
-		.slider_car14::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_14.png');
-		}
-
-		.slider_car15::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_15.png');
-		}
-
-		.slider_car16::-webkit-slider-thumb {
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_15.png');
-		}
-
-		.slider::-moz-range-thumb {
-			width: 48px;
-			height: 48px;
-			background-size: contain;
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-image: url('http://0.0.0.0:4000/assets/engines/v1/car_1.png');
-			cursor: pointer;
-		}
-	</style>
-	<link rel="stylesheet"
-		  href="https://raw.githubusercontent.com/kristoferjoseph/flexboxgrid/master/dist/flexboxgrid.min.css">
 </head>
 <body>
 <div id="list_of">
@@ -197,8 +24,8 @@
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" crossorigin="anonymous"></script>
 <script>
 	(() => {
-		const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYzOTMyNTEwOWZkYTczMmU2MTQyY2NmMiIsInVzZXJuYW1lIjoiQnRjT2xleSIsImV4cCI6MTY3NTc3MTk4MywiaWF0IjoxNjcwNTg3OTgzfQ.rf-zbBew0nGiwOljoGR3VjrhtHfsolo1J04y-1SdF18";
-		const socket = io("http://0.0.0.0:3000", {
+		const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2NTcyMTQwYWQzYjJiNWM0MDVmNDgzZSIsInVzZXJuYW1lIjoiTm9lbGlhLlZvbjEwIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6bnVsbCwic3Vic2NyaXB0aW9uX2V4cGlyZSI6IjIwMjQtMDYtMDVUMTI6MzY6MTYuMTY2WiIsImV4cCI6MTcyMjE3MDIwNSwiaWF0IjoxNzE2OTg2MjA1fQ.DY1ILjdAi9H2IPiQscJzR8tQNOhtoPgK5yYVGzOSFJk";
+		const socket = io("http://0.0.0.0:3001/", {
 			reconnectionDelayMax: 10000,
 			upgrades: ["websocket"],
 			auth: {
@@ -210,97 +37,98 @@
 		});
 
 		socket.on("connect", () => {
-			console.log("connected with:");
-			console.log(socket.id); // x8WIv7-mJelg7on_ALbx
+			console.log("connected with:", socket.id);
 		});
 
 		socket.on("disconnect", () => {
-			console.log(socket.id); // undefined
+			console.log("disconnected",socket.id); // undefined
 		});
 		let i = 0;
 		let classList = "";
 		let room_stop = [];
+		let old = {};
 
-		let old = null;
 		socket.onAny((eventName, ...args) => {
 			let room = args[0];
-			let data = JSON.parse(args[1]);
-			if (old === null) {
-				old = data;
-				console.log("burada old doldu 1");
-			}
-			let room_place = $("#a" + room);
-			/*console.log(room, data);*/
-
-			if (room_place.length) {
-				if (!room_stop.includes(room)) {
-					Object.keys(data).forEach(key => {
-						console.log(old, old[key], key);
-						if (old[key] === null || typeof old[key] === "undefined") {
-							old[key] = data[key];
-							console.log("burada old doldu 2");
-						}
-						let speed = Number(data[key].speed);
-						let duration = Number(data[key].duration);
-						console.log("asdasd", Number(old[key].speed), speed);
-						if (Number(old[key].speed) > speed) {
-
-							/* Movement */
-							let current = Number(document.getElementById(key).value);
-							document.getElementById(key).value = current + (speed / duration);
-
-							/* Stops Board Actions */
-							if (document.getElementById(key).value >= 480) {
-								document.getElementById(key).style.background = "green";
-								room_stop.push(room);
-							}
-						}
-					});
-				}
-			} else {
-				// insert
-				let color = getRandomColor();
-				let table = "<hr>";
-				table += "<table id='a" + room + "' style='width: 95%; background: " + color + "'>";
-
-				let im = 1;
-				Object.keys(data).forEach(key => {
-					table += "<tr>";
-					table += "<td style='width: 150px; padding: 4px'>" + key + "</td>";
-					table += "<td>";
-					table += "<input id=\"" + key + "\" type=\"range\" min=\"1\" max=\"480\" value=\"0\" class=\"slider slider_car" + im + "\" disabled='disabled'>";
-					table += "</td>";
-					table += "</tr>";
-					im++;
-				});
-
-				table += "</table>";
-				table += "";
-
-				$("#tables").append(table);
-			}
-			old = data;
-
+			console.log(eventName, args);
 		});
 
+		/*setTimeout(() => {
+
+			socket.onAny((eventName, ...args) => {
+				let room = args[0];
+				let data = JSON.parse(args[1]);
+				if(typeof old[room] === "undefined") {
+					old[room] = data;
+				}
+				let room_place = $("#a" + room);
+				if (room_place.length) {
+					/!*console.log(room_stop, room, room_stop.includes(room));*!/
+					if (!room_stop.includes(room)) {
+						Object.keys(data).forEach(key => {
+							let room_data_old = old[room];
+							let speed = Number(data[key].speed);
+							let duration = Number(data[key].duration);
+							console.log(key + " Speed Diff:", Number(room_data_old[key].speed), speed);
+							if (Number(room_data_old[key].change) < Number(data[key].change)) {
+								//movement
+								let current = Number(document.getElementById(key).value);
+								document.getElementById(key).value = current + 3 + Math.random() * 10;
+								// finish check
+								if (document.getElementById(key).value >= 480) {
+									document.getElementById(key).style.background = "green";
+									room_stop.push(room);
+								}
+							}
+						});
+					}
+				} else {
+					// insert
+					let color = getRandomColor();
+					let table = "<hr>";
+					table += "<table id='a" + room + "' style='width: 95%; background: " + color + "'>";
+
+					let im = 1;
+					Object.keys(data).forEach(key => {
+						table += "<tr>";
+						table += "<td style='width: 150px; padding: 4px'>" + key + "</td>";
+						table += "<td>";
+						table += "<input id=\"" + key + "\" type=\"range\" min=\"1\" max=\"480\" value=\"0\" class=\"slider slider_car" + im + "\" disabled='disabled'>";
+						table += "</td>";
+						table += "</tr>";
+						im++;
+					});
+
+					table += "</table>";
+					table += "";
+
+					$("#tables").append(table);
+				}
+
+				(async () => {
+					old[room] = await data;
+				})();
+
+			});
+		}, 3000);*/
 
 		$(".join").on("click", (el) => {
 			let settings = {
-				"url": "http://0.0.0.0:4000/api/v1/race-game/join",
-				"method": "POST",
+				"url": "http://0.0.0.0:4001/api/ping",
+				"method": "GET",
 				"timeout": 0,
 				"headers": {
-					"Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYzOTMyNTEwOWZkYTczMmU2MTQyY2NmMiIsInVzZXJuYW1lIjoiQnRjT2xleSIsImV4cCI6MTY3NTc3MTk4MywiaWF0IjoxNjcwNTg3OTgzfQ.rf-zbBew0nGiwOljoGR3VjrhtHfsolo1J04y-1SdF18",
+					"Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2NTcyMTQwYWQzYjJiNWM0MDVmNDgzZSIsInVzZXJuYW1lIjoiTm9lbGlhLlZvbjEwIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6bnVsbCwic3Vic2NyaXB0aW9uX2V4cGlyZSI6IjIwMjQtMDYtMDVUMTI6MzY6MTYuMTY2WiIsImV4cCI6MTcyMjE3MDIwNSwiaWF0IjoxNzE2OTg2MjA1fQ.DY1ILjdAi9H2IPiQscJzR8tQNOhtoPgK5yYVGzOSFJk",
 					"Content-Type": "application/json"
 				},
-				"data": JSON.stringify({
+				"data": {
 					"room": "63973ae350ec3a746ff230f2",
 					"game": "6398403a3f95d437cf8c6085"
-				}),
+				},
 			};
 
 			$.ajax(settings).done(function (response) {
-				//console.log(response);
+				console.log(response);
 			});
 		});
 
@@ -311,12 +139,6 @@
 	})();
 
 </script>
-
-</body>
-</html>
-</title>
-</head>
-<body>
 
 </body>
 </html>
