device demo dark mode added

--- a/public/demo_device.html
+++ b/public/demo_device.html
@@ -5,7 +5,7 @@
 	<title>Demo</title>
 
 </head>
-<body>
+<body bgcolor="black">
 <div id="list_of">
 	<button class="join">Rest Ping</button>
 	<button class="ping" id="ping">Socket Ping</button>
