device and user channel

--- a/public/demo.html
+++ b/public/demo.html
@@ -26,7 +26,7 @@
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" crossorigin="anonymous"></script>
 <script>
 	(() => {
-		const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2NGU0ZDIwNTgwNWQ1MzAxZDUxNWM5NyIsInVzZXJuYW1lIjoiQWx5c3Nvbl9SeWFuIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6IjY1ZmVmY2QyMmM3N2E4NTBlNDdjMWUzNiIsInN1YnNjcmlwdGlvbl9leHBpcmUiOiIyMDI0LTA1LTI5VDE5OjUzOjA0LjM3MloiLCJleHAiOjE3MjIyNzg3NDAsImlhdCI6MTcxNzA5NDc0MH0.2Tga_NBpj8x18SmNL3X3_KVYkAgWlFgMYQclmCIx5jc";
+		const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2Nzk1MDkxZDQzNGU5N2RhMGQ4ZTczYyIsInVzZXJuYW1lIjoiQWx5c3Nvbl9SeWFuIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6IjY2NzkyZDMzZmFlZjAwODI4ZmRkNjJiYyIsInN1YnNjcmlwdGlvbl9leHBpcmUiOiIyMDI0LTA3LTAxVDEwOjU1OjEzLjYwOFoiLCJleHAiOjE3MjUwOTg5NjIsImlhdCI6MTcxOTkxNDk2Mn0.72ervOnMjDVOZf2MnphWo3XmvDmZe7IVCo-9hurVRao";
 		const socket = io("http://0.0.0.0:3001", {
 			reconnectionDelayMax: 10000,
 			upgrades: ["websocket"],
@@ -57,11 +57,11 @@
 				"method": "GET",
 				"timeout": 0,
 				"headers": {
-					"Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2NGU0ZDIwNTgwNWQ1MzAxZDUxNWM5NyIsInVzZXJuYW1lIjoiQWx5c3Nvbl9SeWFuIiwiaXNfbWVyY2hhbnQiOmZhbHNlLCJpc19hZG1pbiI6ZmFsc2UsInN1YnNjcmlwdGlvbiI6IjY1ZmVmY2QyMmM3N2E4NTBlNDdjMWUzNiIsInN1YnNjcmlwdGlvbl9leHBpcmUiOiIyMDI0LTA1LTI5VDE5OjUzOjA0LjM3MloiLCJleHAiOjE3MjI1OTA3MDAsImlhdCI6MTcxNzQwNjcwMH0.9kcDYLiPdnW6FV5OhUdONw5hTk7bW7w-Vgvpv0Vv9Y4",
+					"Authorization": "Bearer " + token,
 					"Content-Type": "application/json"
 				},
 				"data": {
-					"users_devices": "user-664e4d205805d5301d515c97-devices",
+					"users_devices": "user-6663275f30b1d1172cfe1950-devices",
 					"device": "device-664e4d6817c4cc3060144bd0"
 				},
 			};
