--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 	<link rel="shortcut icon" type="image/png" href="https://moleculer.services/icon/favicon-16x16.png"/>
 </head>
 <body>
-
+Maia Signage
 </body>
 </html>
